@@ -1,5 +1,6 @@
 ChangeLog
 
+* Adds Q or B encoding to headers when necessary
 * quoted-encoding should now encode NULs \000
 * Fixed encoding of body/AltBody (#553370)
 * Adds "To: undisclosed-recipients:;" when all recipients are hidden (BCC)
